gke_yamls/back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
spec:
  replicas: 1
  selector:
    matchLabels:
      component: back
  template:
    metadata:
      labels:
        component: back
    spec:
      containers:
        - name: back
          image: aleczheng/license-back
          resources:
            requests:
              cpu: "250m"
              memory: "1.5Gi"
            limits:
              cpu: "250m"
              memory: "1.5Gi"
          ports:
            - containerPort: 8080
