gke_yamls/db-mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-mysql-statefulset
spec:
  replicas: 1
  selector:
    matchLabels:
      component: db-mysql
  template:
    metadata:
      labels:
        component: db-mysql
    spec:
      volumes:
        - name: db-mysql-pv
          persistentVolumeClaim:
            claimName: db-mysql-pvc
      containers:
        - name: db-mysql
          image: mysql:5
          resources:
            limits:
              memory: "200Mi"
            requests:
              memory: "100Mi"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-mysql-pv
              mountPath: /var/lib/mysql
              subPath: mysql
