gke_yamls/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      component: front
  template:
    metadata:
      labels:
        component: front
    spec:
      containers:
        - name: front
          image: aleczheng/license-front
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
          ports:
            - containerPort: 80
