gke_yamls/issue-scanner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issue-scanner
spec:
  replicas: 1
  selector:
    matchLabels:
      component: issue-scanner
  template:
    metadata:
      labels:
        component: issue-scanner
    spec:
      volumes:
        - name: issue-scanner-pvs
          persistentVolumeClaim:
            claimName: issue-scanner-pvc
      containers:
        - name: issue-scanner
          image: plosa/issue-scanner:1.6
          resources:
            requests:
              cpu: "250m"
              memory: "1Gi"
          ports:
            - containerPort: 8868
          volumeMounts:
            - name: issue-scanner-pvs
              mountPath: /home/giteeFile
