gke_yamls/lvmeng-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lvmeng
spec:
  replicas: 1
  selector:
    matchLabels:
      component: lvmeng
  template:
    metadata:
      labels:
        component: lvmeng
    spec:
      containers:
        - name: lvmeng
          image: plosa/lvmeng:4.0
          resources:
            requests:
              cpu: "750m"
              memory: "2Gi"
          ports:
            - containerPort: 8080
