gke_yamls/wrapper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wrapper
spec:
  replicas: 1
  selector:
    matchLabels:
      component: wrapper
  template:
    metadata:
      labels:
        component: wrapper
    spec:
      containers:
        - name: wrapper
          image: aleczheng/tool-wrapper
          resources:
            requests:
              cpu: "5m"
              memory: "200Mi"
          ports:
            - containerPort: 8081
