gke_yamls/certer-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: certer-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: certer
  ports:
    - port: 80
      targetPort: 80
