gke_yamls/compatiable-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: compatiable-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: compatiable
  ports:
    - port: 5000
      targetPort: 5000
