gke_yamls/db-mysql-cluster-ip-set.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-mysql-cluster-ip-set
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    component: db-mysql
